--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@
     container_name: quote-gen-container
     ports:
       - "5000:5000"
+    volumes:
+      - ./quote_gen:/app
   web2:
     build: ./quote_disp
     container_name: quote-disp-container
@@ -12,3 +14,5 @@
       - "5001:5001"
     depends_on:
       - web1
+    volumes:
+      - ./quote_disp:/app
